<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_sd_fail">"Couldn't access SD card."</string>
    <string name="accessibility_cancel_button">Cancel</string>
    <string name="accessibility_capture_photo">Capture photo</string>
    <string name="accessibility_capture_video_start">Start Recording</string>
    <string name="accessibility_capture_video_stop">Stop Recording</string>
    <string name="accessibility_close_button">Close</string>
    <string name="accessibility_done_button">Done</string>
    <string name="accessibility_filmstrip_toggle">Photo gallery</string>
    <string name="accessibility_menu_button">Menu</string>
    <string name="accessibility_mode_burst">5 second burst</string>
    <string name="accessibility_mode_last_filmstrip_item">Scroll to last item</string>
    <string name="accessibility_mode_list_hidden">Mode list closed</string>
    <string name="accessibility_mode_list_shown">Mode list open</string>
    <string name="accessibility_mode_next_filmstrip_item">Scroll to next item</string>
    <string name="accessibility_mode_options">Options</string>
    <string name="accessibility_mode_zoom_minus">Zoom out</string>
    <string name="accessibility_mode_zoom_plus">Zoom in</string>
    <string name="accessibility_open_photo_mode">Open photo mode</string>
    <string name="accessibility_open_video_mode">Open video mode</string>
    <string name="accessibility_photo_captured">Photo Captured</string>
    <string name="accessibility_review_cancel">Review cancel</string>
    <string name="accessibility_review_ok">Review done</string>
    <string name="accessibility_review_retake">Review retake</string>
    <string name="accessibility_shutter_button">Shutter</string>
    <string name="accessibility_switch_photo_mode">Open photo mode</string>
    <string name="accessibility_switch_to_camera">Switch to photo</string>
    <string name="accessibility_switch_to_gcam">Switch to high quality</string>
    <string name="accessibility_switch_to_panorama">Switch to panorama</string>
    <string name="accessibility_switch_to_photo_sphere">Switch to Photo Sphere</string>
    <string name="accessibility_switch_to_refocus">Switch to Refocus</string>
    <string name="accessibility_switch_to_video">Switch to video</string>
    <string name="accessibility_switch_video_mode">Open video mode</string>
    <string name="accessibility_unlock_to_camera">Unlock to Camera</string>
    <string name="accessibility_zoom_announcement">Zoom value is %.1f</string>
    <string name="action_calendar">Add Event</string>
    <string name="action_call">Call</string>
    <string name="action_contact">Add Contact</string>
    <string name="action_copy">Copy text</string>
    <string name="action_email">Send Email</string>
    <string name="action_image_search">Search Image</string>
    <string name="action_keep">Keep</string>
    <string name="action_lookup">Shopping</string>
    <string name="action_map">Maps</string>
    <string name="action_message_image">Message</string>
    <string name="action_more">More</string>
    <string name="action_open_url">Open URL</string>
    <string name="action_save">Save image</string>
    <string name="action_search">Search</string>
    <string name="action_share_chooser_title">Share with</string>
    <string name="action_shopping">Shopping</string>
    <string name="action_sms">Message</string>
    <string name="action_translate">Translate</string>
    <string name="advice_dirty_lens_popup_text">"Lens smudges aren't always easy to see, and they can come from fingerprints, oil or dirt.

Clean your lens for better photo quality."</string>
    <string name="advice_scene_distance_description">The person or subject is to close to the camera to produce a sharp image.</string>
    <string name="advice_scene_distance_message">Move back to improve focus</string>
    <string name="advice_snackbar_dirty_lens">Lens may be dirty</string>
    <string name="af_ae_lock">AF / AE Lock</string>
    <string name="aggregate_add_field">Add Field</string>
    <string name="all_photos">ALL PHOTOS</string>
    <string name="animation">Animation</string>
    <string name="aperture">Aperture</string>
    <string name="app_name">Camera HDR+</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="authentication_error">Authentication Error</string>
    <string name="auto">Auto</string>
    <string name="auto_flash_indicator_chip">Flash will fire</string>
    <string name="bottom_center">Bottom-center</string>
    <string name="bottom_left">Bottom-left</string>
    <string name="bottom_right">Bottom-right</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btn_last_filmstrip_item">Last</string>
    <string name="btn_next_filmstrip_item">Next</string>
    <string name="btn_zoom_minus">Z-</string>
    <string name="btn_zoom_plus">Z+</string>
    <string name="burst">Burst (%1$s Photos)</string>
    <string name="burst_creations">Creations</string>
    <string name="burst_date_content_description">Stack of %1$s burst photos taken on %2$s</string>
    <string name="burst_description">Tap the burst button to show the best photos only</string>
    <string name="burst_editor_best_frame_description">Best burst frame</string>
    <string name="burst_editor_close_speed_dial_description">Close creations menu</string>
    <string name="burst_editor_frame_description">Burst frame %1$s</string>
    <string name="burst_editor_navigate_up">Navigate up</string>
    <string name="burst_editor_open_speed_dial_description">Add creations</string>
    <string name="burst_editor_section_header_all">All Photos</string>
    <string name="burst_editor_section_header_best">Best Photos</string>
    <string name="burst_frames">Frames</string>
    <string name="burst_name">Smartburst</string>
    <string name="burst_process_creation">Saving</string>
    <string name="burst_process_done">All items processed</string>
    <string name="burst_process_start">Processing Burst</string>
    <string name="burst_process_x_of_y_items">Processed %1$s of %2$s photos</string>
    <string name="burst_text">Smartburst</string>
    <string name="camera_active_back">Back camera active</string>
    <string name="camera_active_front">Front camera active</string>
    <string name="camera_error_title">Camera error</string>
    <string name="camera_id_back_desc">Switch to front camera</string>
    <string name="camera_id_front_desc">Switch to back camera</string>
    <string name="camera_iris_disabled_toast">Google Lens Disabled. Go to Settings.</string>
    <string name="camera_iris_paused_toast">Waiting for photo to finish processing</string>
    <string name="camera_iris_touch_and_hold">Touch &amp; hold to search</string>
    <string name="camera_iris_touch_and_hold_qr">Touch &amp; hold QR codes</string>
    <string name="camera_iris_touch_and_hold_text">Touch &amp; hold text</string>
    <string name="camera_iris_try">Try Google Lens</string>
    <string name="camera_iris_try_qr">Try Google Lens on QR Codes</string>
    <string name="camera_iris_try_text">Try Google Lens on text</string>
    <string name="camera_menu_more_label">MORE OPTIONS</string>
    <string name="camera_menu_settings_label">SETTINGS</string>
    <string name="camera_preview_area_long_press_label">Google Lens</string>
    <string name="camera_quality_high">hq</string>
    <string name="camera_quality_low">lq</string>
    <string name="camera_quality_max">max</string>
    <string name="cancel_button_description">Cancel</string>
    <string name="cancel_panorama">Discard Panorama</string>
    <string name="cancel_photo_sphere">Discard Photo Sphere</string>
    <string name="cannot_load_image">Cannot load the image!</string>
    <string name="capital_off">OFF</string>
    <string name="capital_on">ON</string>
    <string name="capture_error">Capture error</string>
    <string name="capture_summary">Capture summary</string>
    <string name="capturing">Capturing</string>
    <string name="center">Center</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="cheers_greeting_text">Cheers!</string>
    <string name="clear_effects">Clear effects</string>
    <string name="cling_text_for_refocus_editor_button">To refocus, tap here</string>
    <string name="close">Close</string>
    <string name="collage">Collage</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="pref_category_about">About</string>
    <string name="about_dev_title">Google Camera</string>
    <string name="about_dev_1_title">Original Developers</string>
    <string name="about_dev_1_summary">B-S-G, miniuser, IDan1109</string>
    <string name="about_dev_2_title">Modded By</string>
    <string name="about_dev_2_summary">xenius9</string>
    <string name="about_dev_3_title">Version</string>
    <string name="about_dev_3_summary">0.17</string>
    <string name="about_dev_4_title">XDA Thread</string>
    <string name="about_dev_4_summary" />
    <string name="about_dev_5_title">Telegram Group</string>
    <string name="about_dev_5_summary" />
    <string name="about_dev_6_title">Guide</string>
    <string name="about_dev_6_summary" />
</resources>